--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,13 @@ $carbon--theme: $carbon--theme--g10;
   width: 100%;
 }
 
+.dash-centered-icon {
+  display: inline-block;
+  position: relative;
+  top: 0.2rem;
+  margin-right: $layout-01 / 2;
+}
+
 .centered-icon {
   display: inline-block;
   position: relative;
