--- a/src/content/Auth/auth.scss
+++ b/src/content/Auth/auth.scss
@@ -7,8 +7,12 @@
     background-size: cover;
 
     color: $ui-01;
-    @include carbon--breakpoint(md) {
+    @include carbon--breakpoint(xlg) {
         padding: $spacing-07 * 4;
+    }
+
+    @include carbon--breakpoint(md) {
+        padding: $spacing-07 * 2;
     }
 
     h2 {
